# model-mapper

./: .gitignore  .rustfmt.toml  .taplo.toml  Cargo.toml  README.md
model-mapper/: Cargo.toml
model-mapper-macros/: Cargo.toml
model-mapper-macros/src/: input.rs  lib.rs  model_mapper.rs  type_path_ext.rs
model-mapper/examples/: additional_fields.rs  complex.rs  different_types.rs  exact_match.rs  generics.rs  ignore_extra_fields.rs  multiple_derives.rs  no_std.rs  renames.rs  skipped_fields.rs  with.rs  with_ref.rs
model-mapper/src/: lib.rs
model-mapper/src/with/: chrono.rs  error.rs  hashmap.rs  mod.rs  option.rs  vec.rs  with_chrono.rs  with_serde.rs
model-mapper/tests/: model_mapper.rs
