[workspace]
members = ["model-mapper", "model-mapper-macros"]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/lasantosr/model-mapper"
keywords = ["model", "mapper", "derive", "from", "into"]
categories = ["development-tools", "rust-patterns", "no-std"]

[workspace.dependencies]
model-mapper-macros = { version = "=0.7.0", path = "./model-mapper-macros" }

anyhow            = "1"
chrono            = "0.4"
darling           = "0.23"
heck              = "0.5"
macro-field-utils = "0.5"
proc-macro-crate  = "3"
proc-macro-error2 = "2"
proc-macro2       = "1"
quote             = "1"
serde             = "1"
serde_json        = "1"
syn               = "2"
