[package]
name = "model-mapper"
description = "Derive macro to map between different types"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

# Includes mappers for chrono types
chrono = ["dep:chrono"]

# Includes mappers for serde types
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
model-mapper-macros = { workspace = true }

anyhow = { workspace = true }

chrono     = { workspace = true, optional = true }
serde      = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
