[package]
name = "model-mapper"
description = "Derive macro to map between different types"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["std"]

# Requires a dependency on the Rust standard library
std = ["dep:anyhow"]

[dependencies]
model-mapper-macros = { workspace = true }

anyhow = { workspace = true, optional = true }
